# claude

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  package.json  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
aicodezh/: __init__.py  __main__.py  agent.py  backend.py  checkpoint.py  cli.py  config.py  history.py  hooks.py  i18n.py  mcp_tools.py  quota.py  skills.py  templates.py  tools.py  version.py
docs/: COMMUNITY_GUIDE.md
plugin/: README.md  manifest.json  server.py
plugin/commands/: en.md  explain-zh.md  fix-zh.md  review-zh.md  test-zh.md  zh.md  zht.md
scripts/: postinstall.js
